--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,8 +1,28 @@
 .main {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  font-family: "Poppins Thin";
+  font-size: 2rem;
+  text-align: center;
+}
+
+.heading {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 0;
+  animation: typing;
+  animation-duration: 1.5s;
+  animation-timing-function: steps(30, end);
+  animation-fill-mode: forwards;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
