--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,9 +2,6 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --rose: #dbb3b1;
   --light-pink: #c89fa3;
@@ -16,15 +13,7 @@
   --background-dark-hex: #a67f8e;
 
   --text-color: #000;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background-light-hex: var(--light-brown);
-    --background-dark-hex: var(--dark);
-
-    --text-color: var(--rose);
-  }
+  --links-color: #367cff;
 }
 
 * {
@@ -37,6 +26,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  max-height: 100vh;
+  overflow-y: hidden;
 }
 
 body {
@@ -44,10 +35,4 @@ body {
   font-family: "Baskerville Regular";
   background: url("/static/background.png") no-repeat;
   background-size: cover;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
